[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button1" type="Button" parent="."]
margin_left = 10.0
margin_top = 16.0
margin_right = 174.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 122, 38 )
text = "Exercício 1"

[node name="Button2" type="Button" parent="."]
margin_left = 184.0
margin_top = 16.0
margin_right = 348.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 122, 38 )
text = "Exercício 2"

[node name="Button3" type="Button" parent="."]
margin_left = 358.0
margin_top = 16.0
margin_right = 522.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 122, 38 )
text = "Exercício 3"

[node name="Button4" type="Button" parent="."]
margin_left = 531.0
margin_top = 16.0
margin_right = 695.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 122, 38 )
text = "Exercício 4"

[node name="Label" type="Label" parent="."]
margin_left = 13.0
margin_top = 84.0
margin_right = 689.0
margin_bottom = 116.0
text = "Você está no Exercício 1: Crie uma lista preenchida e mostre na tela"

[node name="LabelResultado" type="Label" parent="."]
margin_left = 25.0
margin_top = 281.0
margin_right = 513.0
margin_bottom = 359.0
rect_scale = Vector2( 2, 2 )

[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
